--- a/CS/SignPdfExample.csproj
+++ b/CS/SignPdfExample.csproj
@@ -46,10 +46,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="DevExpress.Document.Processor" Version="23.1.3" />
+		<PackageReference Include="DevExpress.Document.Processor" Version="23.1.2" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
-		<PackageReference Include="DevExpress.Drawing.Skia" Version="23.1.3" />
-		<PackageReference Include="DevExpress.Pdf.SkiaRenderer" Version="23.1.3" />
+		<PackageReference Include="DevExpress.Drawing.Skia" Version="23.1.3\2" />
+		<PackageReference Include="DevExpress.Pdf.SkiaRenderer" Version="23.1.2" />
 		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.3" />
 	</ItemGroup>
 
